--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <div class="ansh">
-    <img class="topcloud"src="images/cloud.png" alt="cloud images">
+    <img class="topcloud"src="cloud.png" alt="cloud images">
     <h1>I'm Anshul</h1>
         <h2>a <span>pro</span>grammer</h2>
-    <img class="bottomcloud" src="images/cloud.png" alt="cloud images">
-    <img src="images/mountain.png" alt="mountain images">
+    <img class="bottomcloud" src="cloud.png" alt="cloud images">
+    <img src="mountain.png" alt="mountain images">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="image"src="images/anshul.jpg" alt="profile pic">
+          <img class="image"src="anshul.jpg" alt="profile pic">
           <h2>Hello.</h2>
           <p class="intro">I am an ioS and Web Developer. I'm the founder and
             CTO of The App Brewery. I coffee and brew my own 
@@ -29,7 +29,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="img-skil" src="images/computer.png" alt="">
+            <img class="img-skil" src="computer.png" alt="">
             <h3>Design and Dovelopment</h3>
             <p class="pera1">I started learning to code when I was 12 years old because l
               wanted to make my own video games. Over time, I have gained a
@@ -37,7 +37,7 @@
               applications</p>
           </div>
           <div class="skill-row">
-            <img class="img-skil2" src="images/chillies.png" alt="">
+            <img class="img-skil2" src="chillies.png" alt="">
             <h3>Hot wings and Chills</h3>
             <p class="pera2">But my best skill is actually in eating hot wings. I am the
               undisputed queen of hot wing challenges. Ghost Peppers and.
