img source change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="image"src="anshul.jpg" alt="profile pic">
+          <img class="image"src="Anshul.jpg" alt="profile pic">
           <h2>Hello.</h2>
           <p class="intro">I am an ioS and Web Developer. I'm the founder and
             CTO of The App Brewery. I coffee and brew my own 
