--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           <div class="skill-row">
             <img class="img-skil2" src="chillies.png" alt="">
             <h3>Hot wings and Chills</h3>
-            <p class="pera2">But my best skill is actually in eating hot wings. I am the
-              undisputed queen of hot wing challenges. Ghost Peppers and.
+            <p class="pera2">But my best skill is actually in eating hot wings.khatro se khelne ka sock h .... Ghost Peppers and.
               Carolina Reapers are my favourite snacks.</p>
           </div>
         </div>
